@@ -1,0 +1,60 @@
+# TTA ("True Audio") support for Mutagen
+# Copyright 2006 Joe Wreschnig
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of version 2 of the GNU General Public License as
+# published by the Free Software Foundation.
+
+"""TTA audio stream information and tags.
+
+True Audio is a lossless format designed for real-time encoding and
+decoding. This module is based on the documentation at
+http://www.true-audio.com/TTA_Lossless_Audio_Codec_-_Format_Description
+
+TTA files use ID3 tags.
+"""
+
+__all__ = ["TTA", "Open", "delete"]
+
+from mutagen.id3 import ID3FileType
+from mutagen._util import cdata
+
+class error(RuntimeError): pass
+class TTAHeaderError(error, IOError): pass
+
+class TTAInfo(object):
+    """TTA stream information.
+
+    Attributes:
+    length - audio length, in seconds
+    sample_rate - audio sample rate, in Hz
+    """
+
+    def __init__(self, fileobj, offset):
+        fileobj.seek(offset or 0)
+        header = fileobj.read(18)
+        if len(header) != 18 or not header.startswith("TTA"):
+            raise TTAHeaderError("TTA header not found")
+        self.sample_rate = cdata.int_le(header[10:14])
+        samples = cdata.uint_le(header[14:18])
+        self.length = float(samples) / self.sample_rate
+
+    def pprint(self):
+        return "True Audio, %.2f seconds, %d Hz." % (
+            self.length, self.sample_rate)
+
+class TTA(ID3FileType):
+    """A True Audio file."""
+
+    _Info = TTAInfo
+
+    def score(filename, fileobj, header):
+        return (header.startswith("ID3") + header.startswith("TTA") +
+                filename.lower().endswith(".tta"))
+    score = staticmethod(score)
+
+Open = TTA
+
+def delete(filename):
+    """Remove tags from a file."""
+    TTA(filename).delete()
